fixed scrollbar

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -172,6 +172,17 @@ button:hover {
 #eventDisplay::-webkit-scrollbar-thumb {
   background-color: #9f7e69;
 }
+#friendDisplay::-webkit-scrollbar {
+    width: .5em;
+}
+
+#friendDisplay::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+}
+
+#friendDisplay::-webkit-scrollbar-thumb {
+  background-color: #9f7e69;
+}
 
 #dashboardContainer {
     margin: auto;
